添加艺术家页面和作品详情页面功能

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Navigation Menu -->
         <nav class="main-nav">
             <ul>
-                <li><a href="#">艺术家作品集</a></li>
+                <li><a href="artists.html">艺术家作品集</a></li>
                 <li><a href="#">艺术家团队</a></li>
                 <li><a href="#">艺术品收藏</a></li>
                 <li><a href="#">8月艺术展会</a></li>
