--- a/artists.html
+++ b/artists.html
@@ -48,12 +48,12 @@
             <!-- 常玉 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <a href="artwork-detail.html">
+                    <a href="artist-changyu.html">
                         <img src="images/changyu.jpg" alt="常玉">
                     </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name"><a href="artwork-detail.html">常玉</a></h2>
+                    <h2 class="artist-name"><a href="artist-changyu.html">常玉</a></h2>
                     <p class="artist-description">1901-1966，中国现代油画家，被誉为"东方的马蒂斯"。</p>
                     <p class="artist-details">旅法画家，以花卉、人体和动物画著称。</p>
                     <div class="artist-store">
@@ -65,10 +65,12 @@
             <!-- 许德民 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <img src="images/xudeming.webp" alt="许德民">
+                    <a href="artist-xudeming.html">
+                        <img src="images/xudeming.webp" alt="许德民">
+                    </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name">许德民</h2>
+                    <h2 class="artist-name"><a href="artist-xudeming.html">许德民</a></h2>
                     <p class="artist-description">中国当代著名艺术家，擅长水墨画创作。</p>
                     <p class="artist-details">作品融合传统与现代，具有独特的艺术语言。</p>
                     <div class="artist-store">
@@ -80,10 +82,12 @@
             <!-- 许麟云 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <img src="images/xulinyun.jpg" alt="许麟云">
+                    <a href="artist-xulinyun.html">
+                        <img src="images/xulinyun.jpg" alt="许麟云">
+                    </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name">许麟云</h2>
+                    <h2 class="artist-name"><a href="artist-xulinyun.html">许麟云</a></h2>
                     <p class="artist-description">当代艺术家，擅长抽象表现主义创作。</p>
                     <p class="artist-details">作品充满力量感和情感表达，探索人类内心世界。</p>
                     <div class="artist-store">
@@ -95,10 +99,12 @@
             <!-- 画家霍兆和 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <img src="images/huozhaohe.jpg" alt="霍兆和">
+                    <a href="artist-huozhaohe.html">
+                        <img src="images/huozhaohe.jpg" alt="霍兆和">
+                    </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name">霍兆和</h2>
+                    <h2 class="artist-name"><a href="artist-huozhaohe.html">霍兆和</a></h2>
                     <p class="artist-description">画家，擅长中国传统山水画。</p>
                     <p class="artist-details">作品继承传统笔墨精神，融入现代审美。</p>
                     <div class="artist-store">
@@ -110,10 +116,12 @@
             <!-- 中国人的一张脸 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <img src="images/zhongguorendeyizhanglian.jpg" alt="中国人的一张脸">
+                    <a href="artwork-zhongguorendeyizhanglian.html">
+                        <img src="images/zhongguorendeyizhanglian.jpg" alt="中国人的一张脸">
+                    </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name">中国人的一张脸</h2>
+                    <h2 class="artist-name"><a href="artwork-zhongguorendeyizhanglian.html">中国人的一张脸</a></h2>
                     <p class="artist-description">现代，当代艺术作品。</p>
                     <p class="artist-details">探索中国人的身份认同与文化表达。</p>
                     <div class="artist-store">
@@ -128,12 +136,12 @@
             <!-- 艺术作品1 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-detail.html">
+                    <a href="artwork-redworld.html">
                         <img src="images/redworld.jpg" alt="红色世界">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-detail.html">红色世界 | Red World</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-redworld.html">红色世界 | Red World</a></h3>
                     <div class="artwork-store">
                         <a href="#store1">荣宝官方旗舰店</a>
                     </div>
@@ -143,12 +151,12 @@
             <!-- 艺术作品2 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-detail.html">
+                    <a href="artwork-renwuxiaoxiang.html">
                         <img src="images/renwuxiaoxiang.webp" alt="人物肖像">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-detail.html">人物肖像</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-renwuxiaoxiang.html">人物肖像</a></h3>
                     <div class="artwork-store">
                         <a href="#store2">荣宝官方旗舰店</a>
                     </div>
@@ -158,12 +166,12 @@
             <!-- 艺术作品3 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-detail.html">
+                    <a href="artwork-nvhaixiaoxiang.html">
                         <img src="images/nvhaixiaoxiang.jpg" alt="女孩肖像">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-detail.html">女孩肖像</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-nvhaixiaoxiang.html">女孩肖像</a></h3>
                     <div class="artwork-store">
                         <a href="#store3">荣宝官方旗舰店</a>
                     </div>
@@ -173,12 +181,12 @@
             <!-- 艺术作品4 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-detail.html">
+                    <a href="artwork-chouxiangyishu.html">
                         <img src="images/chouxiangyishu.png" alt="抽象艺术">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-detail.html">抽象艺术</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-chouxiangyishu.html">抽象艺术</a></h3>
                     <div class="artwork-store">
                         <a href="#store4">荣宝官方旗舰店</a>
                     </div>
@@ -188,12 +196,12 @@
             <!-- 艺术作品5 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-detail.html">
+                    <a href="artwork-baihe.html">
                         <img src="images/baihe.jpg" alt="白鹤">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-detail.html">白鹤</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-baihe.html">白鹤</a></h3>
                     <div class="artwork-store">
                         <a href="#store5">荣宝官方旗舰店</a>
                     </div>
