Improve navigation and back button styling

--- a/artists.html
+++ b/artists.html
@@ -57,7 +57,7 @@
                     <p class="artist-description">1901-1966，中国现代油画家，被誉为"东方的马蒂斯"。</p>
                     <p class="artist-details">旅法画家，以花卉、人体和动物画著称。</p>
                     <div class="artist-store">
-                        <a href="#sanyu-store">常玉官方旗舰店</a>
+                        <a href="store.html">常玉官方旗舰店</a>
                     </div>
                 </div>
             </div>
