feat: add back-to-top buttons, clickable artwork titles, reduce detail image size; implement Xudeming & Xulinyun pages

--- a/artists.html
+++ b/artists.html
@@ -65,12 +65,12 @@
             <!-- 许德民 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <a href="artist-xudeming.html">
+                    <a href="artworks-xudeming.html">
                         <img src="images/xudeming.webp" alt="许德民">
                     </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name"><a href="artist-xudeming.html">许德民</a></h2>
+                    <h2 class="artist-name"><a href="artworks-xudeming.html">许德民</a></h2>
                     <p class="artist-description">中国当代著名艺术家，擅长水墨画创作。</p>
                     <p class="artist-details">作品融合传统与现代，具有独特的艺术语言。</p>
                     <div class="artist-store">
@@ -82,12 +82,12 @@
             <!-- 许麟云 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <a href="artist-xulinyun.html">
+                    <a href="artworks-xulinyun.html">
                         <img src="images/xulinyun.jpg" alt="许麟云">
                     </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name"><a href="artist-xulinyun.html">许麟云</a></h2>
+                    <h2 class="artist-name"><a href="artworks-xulinyun.html">许麟云</a></h2>
                     <p class="artist-description">当代艺术家，擅长抽象表现主义创作。</p>
                     <p class="artist-details">作品充满力量感和情感表达，探索人类内心世界。</p>
                     <div class="artist-store">
