fix: correct artists.html links; add Huozhaohe listing; add Zhongguorendeyizhanglian listing and detail pages; ensure back-to-top and clickable titles

--- a/artists.html
+++ b/artists.html
@@ -99,12 +99,12 @@
             <!-- 画家霍兆和 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <a href="artist-huozhaohe.html">
+                    <a href="artworks-huozhaohe.html">
                         <img src="images/huozhaohe.jpg" alt="霍兆和">
                     </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name"><a href="artist-huozhaohe.html">霍兆和</a></h2>
+                    <h2 class="artist-name"><a href="artworks-huozhaohe.html">霍兆和</a></h2>
                     <p class="artist-description">画家，擅长中国传统山水画。</p>
                     <p class="artist-details">作品继承传统笔墨精神，融入现代审美。</p>
                     <div class="artist-store">
@@ -116,12 +116,12 @@
             <!-- 中国人的一张脸 -->
             <div class="artist-card">
                 <div class="artist-image">
-                    <a href="artwork-zhongguorendeyizhanglian.html">
+                    <a href="artworks-zhongguorendeyizhanglian.html">
                         <img src="images/zhongguorendeyizhanglian.jpg" alt="中国人的一张脸">
                     </a>
                 </div>
                 <div class="artist-info">
-                    <h2 class="artist-name"><a href="artwork-zhongguorendeyizhanglian.html">中国人的一张脸</a></h2>
+                    <h2 class="artist-name"><a href="artworks-zhongguorendeyizhanglian.html">中国人的一张脸</a></h2>
                     <p class="artist-description">现代，当代艺术作品。</p>
                     <p class="artist-details">探索中国人的身份认同与文化表达。</p>
                     <div class="artist-store">
