--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             </div>
         </div>
     </footer>
+    
+    <!-- 回到顶部按钮 -->
+    <div class="back-to-top">
+        <a href="#" id="topBtn"><i class="fas fa-arrow-up"></i></a>
+    </div>
 
     <script src="js/main.js"></script>
 </body>
