--- a/artworks-xudeming.html
+++ b/artworks-xudeming.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>许德民作品集 - M Artist</title>
+    <title>许德民 - 作品集 | M Artist 艺术家</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/artists.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,123 +14,84 @@
         <a href="artists.html"><i class="fas fa-chevron-left"></i> 返回</a>
     </div>
 
-    <!-- 顶部导航栏 -->
-    <header class="art-categories">
-        <nav class="categories-nav">
-            <ul>
-                <li><a href="#paintings">画作</a></li>
-                <li><a href="#calligraphy">书法</a></li>
-                <li><a href="#installation">装置艺术</a></li>
-                <li><a href="#contemporary">当代艺术</a></li>
-                <li><a href="#sculpture">雕塑作品</a></li>
-                <li><a href="#photography">摄影作品</a></li>
-                <li class="more-dropdown">
-                    <a href="#more">更多</a>
-                    <div class="dropdown-content">
-                        <a href="#art-products">艺术商品</a>
-                        <a href="#cultural-creative">文创</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="container">
-        <!-- 艺术家信息 -->
-        <div class="artist-profile">
-            <div class="artist-header">
-                <div class="artist-portrait">
-                    <img src="images/xudeming.webp" alt="许德民">
-                </div>
-                <div class="artist-bio">
-                    <h1 class="artist-name">许德民</h1>
-                    <p class="artist-description">中国当代著名艺术家，擅长水墨画创作。作品融合传统与现代，具有独特的艺术语言。</p>
-                    <div class="artist-store">
-                        <a href="#xudemin-store">许德民官方旗舰店</a>
-                    </div>
-                </div>
+    <!-- 页面头部：艺术家信息 -->
+    <section class="container artist-profile">
+        <div class="artist-header">
+            <div class="artist-portrait">
+                <img src="images/xudeming.webp" alt="许德民肖像">
+            </div>
+            <div class="artist-bio">
+                <h1>许德民</h1>
+                <p>中国当代著名艺术家，擅长水墨画创作。作品融合传统与现代，具有独特的艺术语言。</p>
             </div>
         </div>
+    </section>
 
-        <!-- 艺术家视频和介绍按钮 -->
-        <div class="artist-media-buttons">
-            <a href="#video" class="media-button video-button" data-video="https://example.com/video/xudeming-intro">
-                <i class="fas fa-video"></i>
-                <span>艺术家采访</span>
-            </a>
-            <a href="#bio" class="media-button bio-button">
-                <i class="fas fa-user"></i>
-                <span>艺术生平介绍</span>
-            </a>
+    <!-- 艺术家媒体按钮 -->
+    <section class="artist-media-buttons">
+        <a href="#" class="media-button video-button" data-video="#">
+            <i class="fas fa-play-circle"></i>
+            <span>作品视频讲解</span>
+        </a>
+        <a href="#xudemin-store" class="media-button" target="_blank">
+            <i class="fas fa-store"></i>
+            <span>进入作品商店</span>
+        </a>
+    </section>
+
+    <!-- 作品展示网格 -->
+    <section class="artists-gallery">
+        <h2 class="section-title">作品一览</h2>
+        <div class="artists-row">
+            <article class="artwork-card">
+                <div class="artwork-image">
+                    <a href="artwork-xudeming1.html"><img src="images/xudemingart1.jpg" alt="作品一"></a>
+                </div>
+                <div class="artwork-info">
+                    <h3 class="artwork-title"><a href="artwork-xudeming1.html">作品一</a></h3>
+                </div>
+            </article>
+            <article class="artwork-card">
+                <div class="artwork-image">
+                    <a href="artwork-xudeming2.html"><img src="images/xudemingart2.jpeg" alt="作品二"></a>
+                </div>
+                <div class="artwork-info">
+                    <h3 class="artwork-title"><a href="artwork-xudeming2.html">作品二</a></h3>
+                </div>
+            </article>
+            <article class="artwork-card">
+                <div class="artwork-image">
+                    <a href="artwork-xudeming3.html"><img src="images/xudemingart3.jpeg" alt="作品三"></a>
+                </div>
+                <div class="artwork-info">
+                    <h3 class="artwork-title"><a href="artwork-xudeming3.html">作品三</a></h3>
+                </div>
+            </article>
+            <article class="artwork-card">
+                <div class="artwork-image">
+                    <a href="artwork-xudeming4.html"><img src="images/xudemingart4.jpeg" alt="作品四"></a>
+                </div>
+                <div class="artwork-info">
+                    <h3 class="artwork-title"><a href="artwork-xudeming4.html">作品四</a></h3>
+                </div>
+            </article>
+            <article class="artwork-card">
+                <div class="artwork-image">
+                    <a href="artwork-xudeming5.html"><img src="images/xudemingart5.jpg" alt="作品五"></a>
+                </div>
+                <div class="artwork-info">
+                    <h3 class="artwork-title"><a href="artwork-xudeming5.html">作品五</a></h3>
+                </div>
+            </article>
         </div>
-
-        <!-- 代表作品区域 -->
-        <section class="artwork-section" id="paintings">
-            <h2 class="section-title">代表作品</h2>
-            <div class="artwork-grid">
-                <div class="artwork-item">
-                    <div class="artwork-image">
-                        <a href="artwork-xudeming1.html">
-                            <img src="images/xudemingart1.jpg" alt="许德民作品1">
-                        </a>
-                    </div>
-                    <div class="artwork-info">
-                        <h3 class="artwork-title"><a href="artwork-xudeming1.html">作品一</a></h3>
-                    </div>
-                </div>
-
-                <div class="artwork-item">
-                    <div class="artwork-image">
-                        <a href="artwork-xudeming2.html">
-                            <img src="images/xudemingart2.jpeg" alt="许德民作品2">
-                        </a>
-                    </div>
-                    <div class="artwork-info">
-                        <h3 class="artwork-title"><a href="artwork-xudeming2.html">作品二</a></h3>
-                    </div>
-                </div>
-
-                <div class="artwork-item">
-                    <div class="artwork-image">
-                        <a href="artwork-xudeming3.html">
-                            <img src="images/xudemingart3.jpeg" alt="许德民作品3">
-                        </a>
-                    </div>
-                    <div class="artwork-info">
-                        <h3 class="artwork-title"><a href="artwork-xudeming3.html">作品三</a></h3>
-                    </div>
-                </div>
-
-                <div class="artwork-item">
-                    <div class="artwork-image">
-                        <a href="artwork-xudeming4.html">
-                            <img src="images/xudemingart4.jpeg" alt="许德民作品4">
-                        </a>
-                    </div>
-                    <div class="artwork-info">
-                        <h3 class="artwork-title"><a href="artwork-xudeming4.html">作品四</a></h3>
-                    </div>
-                </div>
-
-                <div class="artwork-item">
-                    <div class="artwork-image">
-                        <a href="artwork-xudeming5.html">
-                            <img src="images/xudemingart5.jpg" alt="许德民作品5">
-                        </a>
-                    </div>
-                    <div class="artwork-info">
-                        <h3 class="artwork-title"><a href="artwork-xudeming5.html">作品五</a></h3>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
+    </section>
 
     <!-- 回到顶部按钮 -->
     <div class="back-to-top">
         <a href="#" id="topBtn">顶部</a>
     </div>
 
+    <!-- 页脚 -->
     <footer class="site-footer">
         <div class="footer-content">
             <p>&copy; 2025 M Artist 艺术家. 保留所有权利。</p>
