Add listing + detail pages for Red World and Renwuxiaoxiang; update artists.html and homepage navigation for consistency.

--- a/artists.html
+++ b/artists.html
@@ -136,12 +136,12 @@
             <!-- 艺术作品1 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-redworld.html">
+                    <a href="artworks-redworld.html">
                         <img src="images/redworld.jpg" alt="红色世界">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-redworld.html">红色世界 | Red World</a></h3>
+                    <h3 class="artwork-title"><a href="artworks-redworld.html">红色世界 | Red World</a></h3>
                     <div class="artwork-store">
                         <a href="#store1">荣宝官方旗舰店</a>
                     </div>
@@ -151,12 +151,12 @@
             <!-- 艺术作品2 -->
             <div class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-renwuxiaoxiang.html">
+                    <a href="artworks-renwuxiaoxiang.html">
                         <img src="images/renwuxiaoxiang.webp" alt="人物肖像">
                     </a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-renwuxiaoxiang.html">人物肖像</a></h3>
+                    <h3 class="artwork-title"><a href="artworks-renwuxiaoxiang.html">人物肖像</a></h3>
                     <div class="artwork-store">
                         <a href="#store2">荣宝官方旗舰店</a>
                     </div>
