--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <li><a href="#">艺术家团队</a></li>
                 <li><a href="#">艺术品收藏</a></li>
                 <li><a href="#">8月艺术展会</a></li>
+                <li><a href="artworks-redworld.html">红色世界</a></li>
+                <li><a href="artworks-renwuxiaoxiang.html">人物肖像</a></li>
                 <li><a href="#">艺术商品</a></li>
                 <li><a href="#">文创产品</a></li>
                 <li><a href="#">酒店加盟</a></li>
