feat: align nvhaixiaoxiang/chouxiangyishu to singular listing URLs; update listings & detail back links; fix image filenames; match Chinese layout/labels

--- a/artworks-chouxiangyishu.html
+++ b/artworks-chouxiangyishu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>女孩肖像 - 作品集 | M Artist 艺术家</title>
+    <title>抽象艺术 - 作品集 | M Artist 艺术家</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/artists.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -18,11 +18,11 @@
     <section class="container artist-profile">
         <div class="artist-header">
             <div class="artist-portrait">
-                <img src="images/artist-default.jpg" alt="女孩肖像">
+                <img src="images/artist-default.jpg" alt="抽象艺术">
             </div>
             <div class="artist-bio">
-                <h1>女孩肖像</h1>
-                <p>以女孩为主题的肖像系列，呈现青春与纯真的艺术表达。</p>
+                <h1>抽象艺术</h1>
+                <p>以形式、色彩与线条为核心语言，探索抽象表达的艺术系列。</p>
             </div>
         </div>
     </section>
@@ -33,7 +33,7 @@
             <i class="fas fa-play-circle"></i>
             <span>作品视频讲解</span>
         </a>
-        <a href="#girlportrait-store" class="media-button" target="_blank">
+        <a href="#abstract-store" class="media-button" target="_blank">
             <i class="fas fa-store"></i>
             <span>进入作品商店</span>
         </a>
@@ -45,18 +45,18 @@
         <div class="artists-row">
             <article class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-nvhaixiaoxiang1.html"><img src="images/nvhaixiaoxiangart1.jpg" alt="作品一"></a>
+                    <a href="artwork-chouxiangyishu1.html"><img src="images/chouxiangyishu1.jpg" alt="作品一"></a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-nvhaixiaoxiang1.html">作品一</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-chouxiangyishu1.html">作品一</a></h3>
                 </div>
             </article>
             <article class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-nvhaixiaoxiang2.html"><img src="images/nvhaixiaoxiangart2.webp" alt="作品二"></a>
+                    <a href="artwork-chouxiangyishu2.html"><img src="images/chouxiangyishu2.jpg" alt="作品二"></a>
                 </div>
                 <div class="artwork-info">
-                    <h3 class="artwork-title"><a href="artwork-nvhaixiaoxiang2.html">作品二</a></h3>
+                    <h3 class="artwork-title"><a href="artwork-chouxiangyishu2.html">作品二</a></h3>
                 </div>
             </article>
         </div>
