--- a/artworks-nvhaixiaoxiang.html
+++ b/artworks-nvhaixiaoxiang.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/artists.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 </head>
 <body class="artists-page">
     <!-- 返回按钮 -->
@@ -45,7 +46,7 @@
         <div class="artists-row">
             <article class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-nvhaixiaoxiang1.html"><img src="images/nvhaixiaoxiangart1.jpg" alt="作品一"></a>
+                    <a href="artwork-nvhaixiaoxiang1.html"><img src="images/nvhaixiaoxiang1.jpg" alt="作品一"></a>
                 </div>
                 <div class="artwork-info">
                     <h3 class="artwork-title"><a href="artwork-nvhaixiaoxiang1.html">作品一</a></h3>
@@ -53,7 +54,7 @@
             </article>
             <article class="artwork-card">
                 <div class="artwork-image">
-                    <a href="artwork-nvhaixiaoxiang2.html"><img src="images/nvhaixiaoxiangart2.webp" alt="作品二"></a>
+                    <a href="artwork-nvhaixiaoxiang2.html"><img src="images/nvhaixiaoxiang2.jpg" alt="作品二"></a>
                 </div>
                 <div class="artwork-info">
                     <h3 class="artwork-title"><a href="artwork-nvhaixiaoxiang2.html">作品二</a></h3>
