--- a/index.html
+++ b/index.html
@@ -40,8 +40,58 @@
         </nav>
     </section>
 
-    
-    
+    <!-- 统一网站页脚 -->
+    <footer class="site-footer" aria-label="网站页脚">
+        <div class="footer-inner">
+            <div class="footer-top">
+                <div class="footer-brand">
+                    <div class="logo">M Artist</div>
+                    <p class="tagline">好生活 · 点艺术</p>
+                    <div class="footer-meta">
+                        <p><i class="fas fa-certificate"></i> 专业 · 品质 · 艺术</p>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h4>联系我们</h4>
+                    <div class="footer-meta">
+                        <p><i class="fas fa-map-marker-alt"></i> 四川省成都市武侯区</p>
+                        <p><i class="fas fa-phone"></i> +86 000000</p>
+                        <p><i class="fas fa-envelope"></i> 123@123.com</p>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h4>服务项目</h4>
+                    <ul>
+                        <li><a href="#">艺术收藏咨询</a></li>
+                        <li><a href="#">空间/酒店设计</a></li>
+                        <li><a href="#">商业空间规划</a></li>
+                        <li><a href="#">艺术品投资顾问</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>关注我们</h4>
+                    <div class="footer-social">
+                        <a href="#" aria-label="微信"><i class="fab fa-weixin"></i></a>
+                        <a href="#" aria-label="微博"><i class="fab fa-weibo"></i></a>
+                        <a href="#" aria-label="小红书"><i class="fas fa-book"></i></a>
+                        <a href="#" aria-label="抖音"><i class="fab fa-tiktok"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="bottom-inner">
+                    <div class="footer-legal">© 2025 M Artist. All Rights Reserved. <a href="#">隐私政策</a> <a href="#">服务条款</a> <a href="#">联系我们</a></div>
+                    <div class="footer-social">
+                        <a href="#" aria-label="微信"><i class="fab fa-weixin"></i></a>
+                        <a href="#" aria-label="微博"><i class="fab fa-weibo"></i></a>
+                        <a href="#" aria-label="小红书"><i class="fas fa-book"></i></a>
+                        <a href="#" aria-label="抖音"><i class="fab fa-tiktok"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- 回到顶部按钮 -->
     <div class="back-to-top">
         <a href="#" id="topBtn"><i class="fas fa-arrow-up"></i></a>
