--- a/artists.html
+++ b/artists.html
@@ -27,9 +27,9 @@
                 <li><a href="#photography">摄影作品</a></li>
                 <li><a href="#exhibition">近期展览</a></li>
                 <li class="more-dropdown">
-                    <a href="#more">更多</a>
-                    <div class="dropdown-content">
-                        <a href="#art-products">艺术商品</a>
+                    <a href="#more" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">更多</a>
+                    <div class="dropdown-content" role="menu" aria-label="更多">
+                        <a href="art-product.html" class="dropdown-cta"><i class="fas fa-store"></i> 进入艺术商品</a>
                         <a href="#home-gallery">家居馆</a>
                         <a href="#home-design">家居设计</a>
                         <a href="#cultural-creative">文创</a>
