--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <p>好生活 · 点艺术</p>
             <div class="hero-cta-container">
                 <a href="critics.html" class="hero-cta"><i class="fas fa-comment-dots"></i> 艺术评论</a>
+                <a href="art-product.html" class="hero-cta"><i class="fas fa-store"></i> 艺术商品</a>
             </div>
         </div>
         
@@ -28,7 +29,7 @@
                 <li><a href="#">8月艺术展会</a></li>
                 <li><a href="artworks-redworld.html">红色世界</a></li>
                 <li><a href="artworks-renwuxiaoxiang.html">人物肖像</a></li>
-                <li><a href="#">艺术商品</a></li>
+                <li><a href="art-product.html">艺术商品</a></li>
                 <li><a href="#">文创产品</a></li>
                 <li><a href="#">酒店加盟</a></li>
                 <li><a href="#">酒店设计</a></li>
