Update: Add cultural products CTAs on index and artists; align nav to wenchuang.html

--- a/artists.html
+++ b/artists.html
@@ -30,9 +30,10 @@
                     <a href="#more" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">更多</a>
                     <div class="dropdown-content" role="menu" aria-label="更多">
                         <a href="art-product.html" class="dropdown-cta"><i class="fas fa-store"></i> 进入艺术商品</a>
+                        <a href="wenchuang.html" class="dropdown-cta"><i class="fas fa-gift"></i> 进入文创产品</a>
                         <a href="#home-gallery">家居馆</a>
                         <a href="#home-design">家居设计</a>
-                        <a href="#cultural-creative">文创</a>
+                        
                     </div>
                 </li>
             </ul>
