--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="hero-cta-container">
                 <a href="critics.html" class="hero-cta"><i class="fas fa-comment-dots"></i> 艺术评论</a>
                 <a href="art-product.html" class="hero-cta"><i class="fas fa-store"></i> 艺术商品</a>
+                <a href="wenchuang.html" class="hero-cta"><i class="fas fa-gift"></i> 文创产品</a>
             </div>
         </div>
         
@@ -30,7 +31,7 @@
                 <li><a href="artworks-redworld.html">红色世界</a></li>
                 <li><a href="artworks-renwuxiaoxiang.html">人物肖像</a></li>
                 <li><a href="art-product.html">艺术商品</a></li>
-                <li><a href="#">文创产品</a></li>
+                <li><a href="wenchuang.html">文创产品</a></li>
                 <li><a href="#">酒店加盟</a></li>
                 <li><a href="#">酒店设计</a></li>
                 <li><a href="#">新媒体/OTA运营</a></li>
