Feature: Add Home Gallery entrances on index & artists; unify '更多' dropdown CTA style with logo; implement global image fallback and runtime Unsplash->picsum rewrite in js/main.js

--- a/artists.html
+++ b/artists.html
@@ -26,12 +26,13 @@
                 <li><a href="#sculpture">雕塑作品</a></li>
                 <li><a href="#photography">摄影作品</a></li>
                 <li><a href="#exhibition">近期展览</a></li>
+                <li><a href="#home-gallery">家居馆</a></li>
                 <li class="more-dropdown">
                     <a href="#more" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">更多</a>
                     <div class="dropdown-content" role="menu" aria-label="更多">
                         <a href="art-product.html" class="dropdown-cta"><i class="fas fa-store"></i> 进入艺术商品</a>
                         <a href="wenchuang.html" class="dropdown-cta"><i class="fas fa-gift"></i> 进入文创产品</a>
-                        <a href="#home-gallery">家居馆</a>
+                        <a href="home-gallery.html" class="dropdown-cta"><i class="fas fa-couch"></i> 进入家居馆</a>
                         <a href="#home-design">家居设计</a>
                         
                     </div>
@@ -210,6 +211,25 @@
             </div>
         </div>
     </main>
+
+    <!-- 家居馆入口区块（与分类导航锚点对应） -->
+    <section class="artwork-categories" id="home-gallery">
+        <h3>家居馆</h3>
+        <div class="artists-row">
+            <div class="artwork-card">
+                <div class="artwork-image">
+                    <a href="home-gallery.html">
+                        <img src="images/product-placeholder.svg" alt="家居馆入口">
+                    </a>
+                </div>
+                <div class="artwork-info">
+                    <h3 class="artwork-title"><a href="home-gallery.html">探索家居馆</a></h3>
+                    <p class="artist-details">茶台、餐桌、沙发、灯具等艺术家居精选。</p>
+                    <a href="home-gallery.html" class="dropdown-cta"><i class="fas fa-couch"></i> 进入家居馆</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- 回到顶部按钮 -->
     <div class="back-to-top">
