--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="critics.html" class="hero-cta"><i class="fas fa-comment-dots"></i> 艺术评论</a>
                 <a href="art-product.html" class="hero-cta"><i class="fas fa-store"></i> 艺术商品</a>
                 <a href="wenchuang.html" class="hero-cta"><i class="fas fa-gift"></i> 文创产品</a>
+                <a href="home-gallery.html" class="hero-cta"><i class="fas fa-couch"></i> 家居馆</a>
             </div>
         </div>
         
